--- a/TP3Array/index.html
+++ b/TP3Array/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Practica de ejercicios JavaScrip">
         <meta name= "author" content="Clemencia Palazzo">
-        <meta name="keywords" content="variables, tipos de datos, funciones">
+        <meta name="keywords" content="Array">
         
         <link href="css/style.css" rel="stylesheet">
        
@@ -20,6 +20,9 @@
     <script src="../JS/02.js"></script>
     <script src="../JS/03.js"></script>
     <script src="../JS/04.js"></script>
+    <script src="../JS/05.js"></script>
+    <script src="../JS/06.js"></script>
+    <script src="../JS/07.js"></script>
 
 </body>
 
